# reveal-dig

./: .pre-commit-config.yaml  LICENSE  Makefile  ReadMe.md  pyproject.toml
docs/: 01-background.md  02-roadmap.md  03-proof-of-concept.md
