[project]
name = "reveal-dig"
version = "0.1.0"
readme = "ReadMe.md"
requires-python = ">= 3.14"


dependencies = [
    "pandas >= 3.0.3",
    "seaborn >= 0.13.2",
    "sqlalchemy >= 2.0.51",
    "toml >= 0.10.2",
    "typer >= 0.26.8",
]
[dependency-groups]
dev = [
    "black",
    "isort",
    "mypy",
    "pre-commit",
    "pyright >= 1.1.411",
    "pytest",
    "ruff",
]

[tool.uv]
default-groups = ["dev"]

[tool.black]
line-length = 100

[tool.isort]
float_to_top =            true
include_trailing_comma =  true
multi_line_output =       "VERTICAL_HANGING_INDENT"
line_length =             100

[tool.mypy]
exclude = "^.*/.venv/"

[tool.pyright]
reportUninitializedInstanceVariable = true
exclude = [
    "**/.venv/",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "E4", "E7", "E9", "A", "ANN", "ARG", "ASYNC", "B", "BLE", "C", "C4", "C90", "COM",
    "DTZ", "E", "EM", "EXE", "F", "FBT", "FIX", "FURB", "G", "ICN", "INT", "ISC",
    "LOG", "N", "NPY", "PD", "PERF", "PIE", "PL", "PTH", "PYI", "Q",
    "RET", "RSE", "RUF", "SIM", "SLF", "SLOT", "TCH", "TID", "TRY", "UP", "W", "YTT",
]
ignore = [
    "PLR2004",
]
